# swingsight-proto

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  PRIVACY.md  README.md  setup.env.example
.claude/: settings.json
app/: .env.example  AGENTS.md  CLAUDE.md  EAS_DEPLOY.md  app.json  declarations.d.ts  eas.json  package-lock.json  package.json
app/patches/: expo-modules-core+56.0.17.patch  expo-modules-jsi+56.0.10.patch
scripts/: CLAUDE.md  apply-r2-lifecycle.mjs  apply.sh  checkpoint.sh  deploy-worker.sh  determinism_check.sh  recheck_checkpoint.sh  setup.sh  validation_check.sh
supabase/: CLAUDE.md  PROVISIONING.md  README.md  config.toml
supabase/migrations/: 20260626120000_init_schema.sql  20260626120100_rls.sql  20260626120200_realtime.sql  20260626120300_webhook.sql  20260626120400_seed_reference.sql  (+1 more)
worker/: .dockerignore  .env.example  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  pyproject.toml
worker/src/swingsight_worker/: __init__.py  coaching.py  config.py  determinism.py  main.py  process.py  recheck.py  run_local.py  serialize.py  storage.py  writeback.py
worker/src/swingsight_worker/domain/: CLAUDE.md  __init__.py  events.py  fault_library.py  gating.py  keypoints.py
worker/src/swingsight_worker/pipeline/: __init__.py  assemble.py  detect_events.py  domain_const.py  faults.py  ingest.py  keyframes.py  metrics.py  pose.py  quality.py  refine.py  score.py  transcode.py  types.py
worker/src/swingsight_worker/validation/: __init__.py  manifest.py  regression.py  run_regression.py
worker/validation/: README.md  golden_set.json
(+61 files in other folders)
